# wallet-api

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  main.py  pyproject.toml
api/endpoints/: __init__.py  wallets.py
api/schemas/: database.py  wallet_schemas.py
api/services/: wallet_service.py
api/wallet_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/: config.py  database.py
migrations/: env.py
migrations/versions/: 5d3c807fd1fd_initial_migration.py
tests/: tests.py
